# PasswordGen-FileEncryption

./: .gitignore  CHANGELOG.md  CryptoTools.spec  README.md  pyproject.toml
crypto_tools/: __init__.py  cli.py  files.py  gui.py  gui_app.py  hashing.py  passwords.py  preferences.py
docs/: issue-log.md
scripts/: build_windows.ps1
tests/: test_files.py  test_hashing.py  test_passwords.py  test_paths.py
