[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-tools"
version = "0.1.0"
description = "Python desktop app and CLI for passwords, file encryption, and hashing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "tkinterdnd2>=0.4.3",
  "wordfreq>=3.1.1",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
crypto-tools = "crypto_tools.cli:main"

[tool.setuptools.packages.find]
include = ["crypto_tools*"]
